# AS-PINNs

./: .gitignore  CITATION.cff  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: checks.yml
AS-PINNs/Discontinuity caused by force/: AS-PINNs_ex2.ipynb  Solution_ex2.ipynb
AS-PINNs/Discontinuity caused by force and material/: AS-PINNs_ex3.ipynb  Solution_ex3.ipynb
AS-PINNs/Function Fitting/: AS-PINNs_ex1.ipynb  Solution_ex1.ipynb
configs/cases/: force_discontinuity.json  force_material_discontinuity.json  function_fitting.json
docs/: development.md  method-overview.md  notebook-inventory.md  notebook-migration.md  python-case-inventory.md  python-conversion.md  reproducibility.md
notebooks/force_discontinuity/: as_pinns_ex2.ipynb  solution_ex2.ipynb
notebooks/force_material_discontinuity/: as_pinns_ex3.ipynb  solution_ex3.ipynb
notebooks/function_fitting/: as_pinns_ex1.ipynb  solution_ex1.ipynb
scripts/: check_repository.py  clean_notebooks.py  export_notebooks_to_py.py  run_case.py
scripts/cases/force_discontinuity/: as_pinns_ex2.py  solution_ex2.py
scripts/cases/force_material_discontinuity/: as_pinns_ex3.py  solution_ex3.py
scripts/cases/function_fitting/: as_pinns_ex1.py  solution_ex1.py
scripts/notebook_ports/force_discontinuity/: as_pinns_ex2.py  solution_ex2.py
src/as_pinns/: __init__.py  cases.py  cli.py  config.py  execution.py  paths.py  reference_solutions.py  training_plan.py
tests/: test_cases.py  test_configs.py  test_execution.py  test_reference_solutions.py  test_training_runner.py
(+6 files in other folders)
