[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "as-pinns"
version = "0.1.0"
description = "Adversarial and self-adaptive domain decomposition PINNs for high-order differential equations with discontinuities."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Mingsheng Peng" },
  { name = "Hesheng Tang" },
  { name = "Yingwei Kou" },
]
dependencies = [
  "numpy>=1.23",
  "matplotlib>=3.7",
  "sympy>=1.11",
]

[project.optional-dependencies]
training = [
  "deepxde>=1.9",
  "tensorflow>=2.10",
  "scipy>=1.10",
  "xlrd>=2.0",
  "xlwt>=1.3",
]
dev = [
  "pytest>=7",
]

[project.scripts]
as-pinns = "as_pinns.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
